packages/parser/test/parser/E0104.txt
@
===== err =====
anonymous:1:1: ParseError: E0104 - Unexpected token `@`
1 | @
  | ^
